// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Engine Functions Sanity Test should default with Substring output  1`] = `
Object {
  "entryPointResults": Object {
    "evaluationTimestamp": Any<Date>,
    "results": Object {
      "Policy:0:policyNumber": Object {
        "contextFieldInfo": DefaultContextFieldInfo {
          "contextId": "0",
          "contextName": "Policy",
          "fieldName": "policyNumber",
          "fieldPath": "policyNumber",
          "fieldType": "STRING",
        },
        "ruleResults": Array [
          Object {
            "conditionEvaluationResult": DefaultConditionEvaluationResult {
              "conditionEvaluation": "APPLICABLE",
              "error": undefined,
            },
            "kind": 1,
            "payloadResult": Object {
              "events": Array [
                ValueChangedEvent {
                  "attributeTarget": "policyNumber",
                  "contextId": "0",
                  "contextName": "Policy",
                  "newValue": "22463",
                  "previousValue": undefined,
                },
              ],
              "type": 8,
            },
            "ruleInfo": DefaultRuleInfo {
              "context": "Policy",
              "payloadtype": "DEFAULT",
              "ruleName": "f-default-to-policyNumber-with-substring-three-values",
              "targetPath": "policyNumber",
            },
          },
        ],
      },
      "Policy:0:state": Object {
        "contextFieldInfo": DefaultContextFieldInfo {
          "contextId": "0",
          "contextName": "Policy",
          "fieldName": "state",
          "fieldPath": "state",
          "fieldType": "STRING",
        },
        "ruleResults": Array [
          Object {
            "conditionEvaluationResult": DefaultConditionEvaluationResult {
              "conditionEvaluation": "APPLICABLE",
              "error": undefined,
            },
            "kind": 1,
            "payloadResult": Object {
              "events": Array [
                ValueChangedEvent {
                  "attributeTarget": "state",
                  "contextId": "0",
                  "contextName": "Policy",
                  "newValue": " Express",
                  "previousValue": undefined,
                },
              ],
              "type": 8,
            },
            "ruleInfo": DefaultRuleInfo {
              "context": "Policy",
              "payloadtype": "DEFAULT",
              "ruleName": "f-default-to-state-with-substring-two-values",
              "targetPath": "state",
            },
          },
        ],
      },
    },
    "ruleTimeZoneId": "Europe/Vilnius",
  },
  "fieldResults": Object {
    "Policy:0:policyNumber": Object {
      "fieldType": "STRING",
      "id": "Policy:0:policyNumber",
      "info": Object {
        "getContextInstanceId": [Function],
        "getContextName": [Function],
      },
      "isDisabled": undefined,
      "isHidden": undefined,
      "resolvedTargetPath": "policyNumber",
      "ruleResults": Array [],
    },
    "Policy:0:state": Object {
      "fieldType": "STRING",
      "id": "Policy:0:state",
      "info": Object {
        "getContextInstanceId": [Function],
        "getContextName": [Function],
      },
      "isDisabled": undefined,
      "isHidden": undefined,
      "resolvedTargetPath": "state",
      "ruleResults": Array [],
    },
  },
}
`;

exports[`Engine Functions Sanity Test should default with value from function and change field name to field path 1`] = `
Object {
  "entryPointResults": Object {
    "evaluationTimestamp": Any<Date>,
    "results": Object {
      "Policy:0:policyNumber": Object {
        "contextFieldInfo": DefaultContextFieldInfo {
          "contextId": "0",
          "contextName": "Policy",
          "fieldName": "policyNumber",
          "fieldPath": "policyNumber",
          "fieldType": "STRING",
        },
        "ruleResults": Array [
          Object {
            "conditionEvaluationResult": DefaultConditionEvaluationResult {
              "conditionEvaluation": "APPLICABLE",
              "error": undefined,
            },
            "kind": 1,
            "payloadResult": Object {
              "events": Array [
                ValueChangedEvent {
                  "attributeTarget": "policyNumber",
                  "contextId": "0",
                  "contextName": "Policy",
                  "newValue": "125425464",
                  "previousValue": undefined,
                },
              ],
              "type": 8,
            },
            "ruleInfo": DefaultRuleInfo {
              "context": "Policy",
              "payloadtype": "DEFAULT",
              "ruleName": "f-default-to-policyNumber",
              "targetPath": "policyNumber",
            },
          },
        ],
      },
    },
    "ruleTimeZoneId": "Europe/Vilnius",
  },
  "fieldResults": Object {
    "Policy:0:policyNumber": Object {
      "fieldType": "STRING",
      "id": "Policy:0:policyNumber",
      "info": Object {
        "getContextInstanceId": [Function],
        "getContextName": [Function],
      },
      "isDisabled": undefined,
      "isHidden": undefined,
      "resolvedTargetPath": "policyNumber",
      "ruleResults": Array [],
    },
  },
}
`;

exports[`Engine Functions Sanity Test should execute from money and fail assertions 1`] = `
Object {
  "entryPointResults": Object {
    "evaluationTimestamp": Any<Date>,
    "results": Object {
      "CreditCardInfo:2:cardCreditLimitAmount": Object {
        "contextFieldInfo": DefaultContextFieldInfo {
          "contextId": "2",
          "contextName": "CreditCardInfo",
          "fieldName": "cardCreditLimitAmount",
          "fieldPath": "cardCreditLimitAmount",
          "fieldType": "MONEY",
        },
        "ruleResults": Array [
          Object {
            "conditionEvaluationResult": DefaultConditionEvaluationResult {
              "conditionEvaluation": "APPLICABLE",
              "error": undefined,
            },
            "kind": 2,
            "overrideInfo": Object {
              "overridable": false,
              "overrideApplicable": false,
              "overrideGroup": undefined,
            },
            "payloadResult": Object {
              "message": undefined,
              "success": false,
              "type": 1,
              "validationSeverity": "critical",
            },
            "ruleInfo": DefaultRuleInfo {
              "context": "CreditCardInfo",
              "payloadtype": "ASSERTION",
              "ruleName": "f-fromMoney-explicit-usage",
              "targetPath": "cardCreditLimitAmount",
            },
          },
        ],
      },
    },
    "ruleTimeZoneId": "Europe/Vilnius",
  },
  "fieldResults": Object {
    "CreditCardInfo:2:cardCreditLimitAmount": Object {
      "fieldType": "MONEY",
      "id": "CreditCardInfo:2:cardCreditLimitAmount",
      "info": Object {
        "getContextInstanceId": [Function],
        "getContextName": [Function],
      },
      "isDisabled": undefined,
      "isHidden": undefined,
      "resolvedTargetPath": "cardCreditLimitAmount",
      "ruleResults": Array [
        Object {
          "errorCode": "rule-assertion-error",
          "errorMessage": "Assertion failed",
          "isFailed": true,
          "isOverridable": false,
          "isOverridden": false,
          "payloadResult": Object {
            "message": undefined,
            "success": false,
            "type": 1,
            "validationSeverity": "critical",
          },
          "rawTemplateVariables": Array [],
          "ruleName": "f-fromMoney-explicit-usage",
          "severity": "critical",
          "templateVariables": Array [],
        },
      ],
    },
  },
}
`;

exports[`Engine Functions Sanity Test should execute from money and pass assertions 1`] = `
Object {
  "entryPointResults": Object {
    "evaluationTimestamp": Any<Date>,
    "results": Object {
      "CreditCardInfo:2:cardCreditLimitAmount": Object {
        "contextFieldInfo": DefaultContextFieldInfo {
          "contextId": "2",
          "contextName": "CreditCardInfo",
          "fieldName": "cardCreditLimitAmount",
          "fieldPath": "cardCreditLimitAmount",
          "fieldType": "MONEY",
        },
        "ruleResults": Array [
          Object {
            "conditionEvaluationResult": DefaultConditionEvaluationResult {
              "conditionEvaluation": "APPLICABLE",
              "error": undefined,
            },
            "kind": 2,
            "overrideInfo": Object {
              "overridable": false,
              "overrideApplicable": false,
              "overrideGroup": undefined,
            },
            "payloadResult": Object {
              "message": undefined,
              "success": true,
              "type": 1,
              "validationSeverity": "critical",
            },
            "ruleInfo": DefaultRuleInfo {
              "context": "CreditCardInfo",
              "payloadtype": "ASSERTION",
              "ruleName": "f-fromMoney-explicit-usage",
              "targetPath": "cardCreditLimitAmount",
            },
          },
        ],
      },
    },
    "ruleTimeZoneId": "Europe/Vilnius",
  },
  "fieldResults": Object {
    "CreditCardInfo:2:cardCreditLimitAmount": Object {
      "fieldType": "MONEY",
      "id": "CreditCardInfo:2:cardCreditLimitAmount",
      "info": Object {
        "getContextInstanceId": [Function],
        "getContextName": [Function],
      },
      "isDisabled": undefined,
      "isHidden": undefined,
      "resolvedTargetPath": "cardCreditLimitAmount",
      "ruleResults": Array [
        Object {
          "errorCode": "rule-assertion-error",
          "errorMessage": "Assertion failed",
          "isFailed": false,
          "isOverridable": false,
          "isOverridden": false,
          "payloadResult": Object {
            "message": undefined,
            "success": true,
            "type": 1,
            "validationSeverity": "critical",
          },
          "rawTemplateVariables": Array [],
          "ruleName": "f-fromMoney-explicit-usage",
          "severity": "critical",
          "templateVariables": Array [],
        },
      ],
    },
  },
}
`;

exports[`Engine Functions Sanity Test should flat and fail, assert to have 7 items (3 of them serviceHistories) 1`] = `
Object {
  "entryPointResults": Object {
    "evaluationTimestamp": Any<Date>,
    "results": Object {
      "Policy:0:policyNumber": Object {
        "contextFieldInfo": DefaultContextFieldInfo {
          "contextId": "0",
          "contextName": "Policy",
          "fieldName": "policyNumber",
          "fieldPath": "policyNumber",
          "fieldType": "STRING",
        },
        "ruleResults": Array [
          Object {
            "conditionEvaluationResult": DefaultConditionEvaluationResult {
              "conditionEvaluation": "APPLICABLE",
              "error": undefined,
            },
            "kind": 2,
            "overrideInfo": Object {
              "overridable": false,
              "overrideApplicable": false,
              "overrideGroup": undefined,
            },
            "payloadResult": Object {
              "message": undefined,
              "success": false,
              "type": 1,
              "validationSeverity": "critical",
            },
            "ruleInfo": DefaultRuleInfo {
              "context": "Policy",
              "payloadtype": "ASSERTION",
              "ruleName": "f-flat-assert",
              "targetPath": "policyNumber",
            },
          },
        ],
      },
    },
    "ruleTimeZoneId": "Europe/Vilnius",
  },
  "fieldResults": Object {
    "Policy:0:policyNumber": Object {
      "fieldType": "STRING",
      "id": "Policy:0:policyNumber",
      "info": Object {
        "getContextInstanceId": [Function],
        "getContextName": [Function],
      },
      "isDisabled": undefined,
      "isHidden": undefined,
      "resolvedTargetPath": "policyNumber",
      "ruleResults": Array [
        Object {
          "errorCode": "rule-assertion-error",
          "errorMessage": "Assertion failed",
          "isFailed": true,
          "isOverridable": false,
          "isOverridden": false,
          "payloadResult": Object {
            "message": undefined,
            "success": false,
            "type": 1,
            "validationSeverity": "critical",
          },
          "rawTemplateVariables": Array [],
          "ruleName": "f-flat-assert",
          "severity": "critical",
          "templateVariables": Array [],
        },
      ],
    },
  },
}
`;

exports[`Engine Functions Sanity Test should flat, assert to have 7 items (3 of them serviceHistories) 1`] = `
Object {
  "entryPointResults": Object {
    "evaluationTimestamp": Any<Date>,
    "results": Object {
      "Policy:0:policyNumber": Object {
        "contextFieldInfo": DefaultContextFieldInfo {
          "contextId": "0",
          "contextName": "Policy",
          "fieldName": "policyNumber",
          "fieldPath": "policyNumber",
          "fieldType": "STRING",
        },
        "ruleResults": Array [
          Object {
            "conditionEvaluationResult": DefaultConditionEvaluationResult {
              "conditionEvaluation": "APPLICABLE",
              "error": undefined,
            },
            "kind": 2,
            "overrideInfo": Object {
              "overridable": false,
              "overrideApplicable": false,
              "overrideGroup": undefined,
            },
            "payloadResult": Object {
              "message": undefined,
              "success": true,
              "type": 1,
              "validationSeverity": "critical",
            },
            "ruleInfo": DefaultRuleInfo {
              "context": "Policy",
              "payloadtype": "ASSERTION",
              "ruleName": "f-flat-assert",
              "targetPath": "policyNumber",
            },
          },
        ],
      },
    },
    "ruleTimeZoneId": "Europe/Vilnius",
  },
  "fieldResults": Object {
    "Policy:0:policyNumber": Object {
      "fieldType": "STRING",
      "id": "Policy:0:policyNumber",
      "info": Object {
        "getContextInstanceId": [Function],
        "getContextName": [Function],
      },
      "isDisabled": undefined,
      "isHidden": undefined,
      "resolvedTargetPath": "policyNumber",
      "ruleResults": Array [
        Object {
          "errorCode": "rule-assertion-error",
          "errorMessage": "Assertion failed",
          "isFailed": false,
          "isOverridable": false,
          "isOverridden": false,
          "payloadResult": Object {
            "message": undefined,
            "success": true,
            "type": 1,
            "validationSeverity": "critical",
          },
          "rawTemplateVariables": Array [],
          "ruleName": "f-flat-assert",
          "severity": "critical",
          "templateVariables": Array [],
        },
      ],
    },
  },
}
`;

exports[`Engine Functions Sanity Test should run functions in assert payload on policy number 1`] = `
Object {
  "entryPointResults": Object {
    "evaluationTimestamp": Any<Date>,
    "results": Object {
      "Policy:0:policyNumber": Object {
        "contextFieldInfo": DefaultContextFieldInfo {
          "contextId": "0",
          "contextName": "Policy",
          "fieldName": "policyNumber",
          "fieldPath": "policyNumber",
          "fieldType": "STRING",
        },
        "ruleResults": Array [
          Object {
            "conditionEvaluationResult": DefaultConditionEvaluationResult {
              "conditionEvaluation": "APPLICABLE",
              "error": undefined,
            },
            "kind": 2,
            "overrideInfo": Object {
              "overridable": false,
              "overrideApplicable": false,
              "overrideGroup": undefined,
            },
            "payloadResult": Object {
              "message": undefined,
              "success": true,
              "type": 1,
              "validationSeverity": "critical",
            },
            "ruleInfo": DefaultRuleInfo {
              "context": "Policy",
              "payloadtype": "ASSERTION",
              "ruleName": "f-symmetricDifference-assert-policyNumber",
              "targetPath": "policyNumber",
            },
          },
          Object {
            "conditionEvaluationResult": DefaultConditionEvaluationResult {
              "conditionEvaluation": "APPLICABLE",
              "error": undefined,
            },
            "kind": 2,
            "overrideInfo": Object {
              "overridable": false,
              "overrideApplicable": false,
              "overrideGroup": undefined,
            },
            "payloadResult": Object {
              "message": undefined,
              "success": true,
              "type": 1,
              "validationSeverity": "critical",
            },
            "ruleInfo": DefaultRuleInfo {
              "context": "Policy",
              "payloadtype": "ASSERTION",
              "ruleName": "f-distinct-assert-policyNumber",
              "targetPath": "policyNumber",
            },
          },
          Object {
            "conditionEvaluationResult": DefaultConditionEvaluationResult {
              "conditionEvaluation": "APPLICABLE",
              "error": undefined,
            },
            "kind": 2,
            "overrideInfo": Object {
              "overridable": false,
              "overrideApplicable": false,
              "overrideGroup": undefined,
            },
            "payloadResult": Object {
              "message": undefined,
              "success": true,
              "type": 1,
              "validationSeverity": "critical",
            },
            "ruleInfo": DefaultRuleInfo {
              "context": "Policy",
              "payloadtype": "ASSERTION",
              "ruleName": "f-upper-case-assert-policyNumber",
              "targetPath": "policyNumber",
            },
          },
          Object {
            "conditionEvaluationResult": DefaultConditionEvaluationResult {
              "conditionEvaluation": "APPLICABLE",
              "error": undefined,
            },
            "kind": 2,
            "overrideInfo": Object {
              "overridable": false,
              "overrideApplicable": false,
              "overrideGroup": undefined,
            },
            "payloadResult": Object {
              "message": undefined,
              "success": true,
              "type": 1,
              "validationSeverity": "critical",
            },
            "ruleInfo": DefaultRuleInfo {
              "context": "Policy",
              "payloadtype": "ASSERTION",
              "ruleName": "f-includes-in-array-assert-policyNumber",
              "targetPath": "policyNumber",
            },
          },
          Object {
            "conditionEvaluationResult": DefaultConditionEvaluationResult {
              "conditionEvaluation": "APPLICABLE",
              "error": undefined,
            },
            "kind": 2,
            "overrideInfo": Object {
              "overridable": false,
              "overrideApplicable": false,
              "overrideGroup": undefined,
            },
            "payloadResult": Object {
              "message": undefined,
              "success": true,
              "type": 1,
              "validationSeverity": "critical",
            },
            "ruleInfo": DefaultRuleInfo {
              "context": "Policy",
              "payloadtype": "ASSERTION",
              "ruleName": "f-format-date-assert-policyNumber",
              "targetPath": "policyNumber",
            },
          },
          Object {
            "conditionEvaluationResult": DefaultConditionEvaluationResult {
              "conditionEvaluation": "APPLICABLE",
              "error": undefined,
            },
            "kind": 2,
            "overrideInfo": Object {
              "overridable": false,
              "overrideApplicable": false,
              "overrideGroup": undefined,
            },
            "payloadResult": Object {
              "message": undefined,
              "success": true,
              "type": 1,
              "validationSeverity": "critical",
            },
            "ruleInfo": DefaultRuleInfo {
              "context": "Policy",
              "payloadtype": "ASSERTION",
              "ruleName": "f-intersection-assert-policyNumber",
              "targetPath": "policyNumber",
            },
          },
          Object {
            "conditionEvaluationResult": DefaultConditionEvaluationResult {
              "conditionEvaluation": "APPLICABLE",
              "error": undefined,
            },
            "kind": 2,
            "overrideInfo": Object {
              "overridable": false,
              "overrideApplicable": false,
              "overrideGroup": undefined,
            },
            "payloadResult": Object {
              "message": undefined,
              "success": true,
              "type": 1,
              "validationSeverity": "critical",
            },
            "ruleInfo": DefaultRuleInfo {
              "context": "Policy",
              "payloadtype": "ASSERTION",
              "ruleName": "f-trim-assert-policyNumber",
              "targetPath": "policyNumber",
            },
          },
          Object {
            "conditionEvaluationResult": DefaultConditionEvaluationResult {
              "conditionEvaluation": "APPLICABLE",
              "error": undefined,
            },
            "kind": 2,
            "overrideInfo": Object {
              "overridable": false,
              "overrideApplicable": false,
              "overrideGroup": undefined,
            },
            "payloadResult": Object {
              "message": undefined,
              "success": true,
              "type": 1,
              "validationSeverity": "critical",
            },
            "ruleInfo": DefaultRuleInfo {
              "context": "Policy",
              "payloadtype": "ASSERTION",
              "ruleName": "f-pad-left-assert-policyNumber",
              "targetPath": "policyNumber",
            },
          },
          Object {
            "conditionEvaluationResult": DefaultConditionEvaluationResult {
              "conditionEvaluation": "APPLICABLE",
              "error": undefined,
            },
            "kind": 2,
            "overrideInfo": Object {
              "overridable": false,
              "overrideApplicable": false,
              "overrideGroup": undefined,
            },
            "payloadResult": Object {
              "message": undefined,
              "success": true,
              "type": 1,
              "validationSeverity": "critical",
            },
            "ruleInfo": DefaultRuleInfo {
              "context": "Policy",
              "payloadtype": "ASSERTION",
              "ruleName": "f-all-assert-policyNumber",
              "targetPath": "policyNumber",
            },
          },
          Object {
            "conditionEvaluationResult": DefaultConditionEvaluationResult {
              "conditionEvaluation": "APPLICABLE",
              "error": undefined,
            },
            "kind": 2,
            "overrideInfo": Object {
              "overridable": false,
              "overrideApplicable": false,
              "overrideGroup": undefined,
            },
            "payloadResult": Object {
              "message": undefined,
              "success": true,
              "type": 1,
              "validationSeverity": "critical",
            },
            "ruleInfo": DefaultRuleInfo {
              "context": "Policy",
              "payloadtype": "ASSERTION",
              "ruleName": "f-union-assert-policyNumber",
              "targetPath": "policyNumber",
            },
          },
          Object {
            "conditionEvaluationResult": DefaultConditionEvaluationResult {
              "conditionEvaluation": "APPLICABLE",
              "error": undefined,
            },
            "kind": 2,
            "overrideInfo": Object {
              "overridable": false,
              "overrideApplicable": false,
              "overrideGroup": undefined,
            },
            "payloadResult": Object {
              "message": undefined,
              "success": true,
              "type": 1,
              "validationSeverity": "critical",
            },
            "ruleInfo": DefaultRuleInfo {
              "context": "Policy",
              "payloadtype": "ASSERTION",
              "ruleName": "f-difference-assert-policyNumber",
              "targetPath": "policyNumber",
            },
          },
          Object {
            "conditionEvaluationResult": DefaultConditionEvaluationResult {
              "conditionEvaluation": "APPLICABLE",
              "error": undefined,
            },
            "kind": 2,
            "overrideInfo": Object {
              "overridable": false,
              "overrideApplicable": false,
              "overrideGroup": undefined,
            },
            "payloadResult": Object {
              "message": undefined,
              "success": true,
              "type": 1,
              "validationSeverity": "critical",
            },
            "ruleInfo": DefaultRuleInfo {
              "context": "Policy",
              "payloadtype": "ASSERTION",
              "ruleName": "f-concat-assert-policyNumber",
              "targetPath": "policyNumber",
            },
          },
          Object {
            "conditionEvaluationResult": DefaultConditionEvaluationResult {
              "conditionEvaluation": "APPLICABLE",
              "error": undefined,
            },
            "kind": 2,
            "overrideInfo": Object {
              "overridable": false,
              "overrideApplicable": false,
              "overrideGroup": undefined,
            },
            "payloadResult": Object {
              "message": undefined,
              "success": true,
              "type": 1,
              "validationSeverity": "critical",
            },
            "ruleInfo": DefaultRuleInfo {
              "context": "Policy",
              "payloadtype": "ASSERTION",
              "ruleName": "f-pad-right-assert-policyNumber",
              "targetPath": "policyNumber",
            },
          },
          Object {
            "conditionEvaluationResult": DefaultConditionEvaluationResult {
              "conditionEvaluation": "APPLICABLE",
              "error": undefined,
            },
            "kind": 2,
            "overrideInfo": Object {
              "overridable": false,
              "overrideApplicable": false,
              "overrideGroup": undefined,
            },
            "payloadResult": Object {
              "message": undefined,
              "success": true,
              "type": 1,
              "validationSeverity": "critical",
            },
            "ruleInfo": DefaultRuleInfo {
              "context": "Policy",
              "payloadtype": "ASSERTION",
              "ruleName": "f-money-to-string-assert-policyNumber",
              "targetPath": "policyNumber",
            },
          },
          Object {
            "conditionEvaluationResult": DefaultConditionEvaluationResult {
              "conditionEvaluation": "APPLICABLE",
              "error": undefined,
            },
            "kind": 2,
            "overrideInfo": Object {
              "overridable": false,
              "overrideApplicable": false,
              "overrideGroup": undefined,
            },
            "payloadResult": Object {
              "message": undefined,
              "success": true,
              "type": 1,
              "validationSeverity": "critical",
            },
            "ruleInfo": DefaultRuleInfo {
              "context": "Policy",
              "payloadtype": "ASSERTION",
              "ruleName": "f-join-assert-policyNumber",
              "targetPath": "policyNumber",
            },
          },
          Object {
            "conditionEvaluationResult": DefaultConditionEvaluationResult {
              "conditionEvaluation": "APPLICABLE",
              "error": undefined,
            },
            "kind": 2,
            "overrideInfo": Object {
              "overridable": false,
              "overrideApplicable": false,
              "overrideGroup": undefined,
            },
            "payloadResult": Object {
              "message": undefined,
              "success": true,
              "type": 1,
              "validationSeverity": "critical",
            },
            "ruleInfo": DefaultRuleInfo {
              "context": "Policy",
              "payloadtype": "ASSERTION",
              "ruleName": "f-includes-in-string-assert-policyNumber",
              "targetPath": "policyNumber",
            },
          },
          Object {
            "conditionEvaluationResult": DefaultConditionEvaluationResult {
              "conditionEvaluation": "APPLICABLE",
              "error": undefined,
            },
            "kind": 2,
            "overrideInfo": Object {
              "overridable": false,
              "overrideApplicable": false,
              "overrideGroup": undefined,
            },
            "payloadResult": Object {
              "message": undefined,
              "success": true,
              "type": 1,
              "validationSeverity": "critical",
            },
            "ruleInfo": DefaultRuleInfo {
              "context": "Policy",
              "payloadtype": "ASSERTION",
              "ruleName": "f-starts-with-assert-policyNumber",
              "targetPath": "policyNumber",
            },
          },
          Object {
            "conditionEvaluationResult": DefaultConditionEvaluationResult {
              "conditionEvaluation": "APPLICABLE",
              "error": undefined,
            },
            "kind": 2,
            "overrideInfo": Object {
              "overridable": false,
              "overrideApplicable": false,
              "overrideGroup": undefined,
            },
            "payloadResult": Object {
              "message": undefined,
              "success": true,
              "type": 1,
              "validationSeverity": "critical",
            },
            "ruleInfo": DefaultRuleInfo {
              "context": "Policy",
              "payloadtype": "ASSERTION",
              "ruleName": "f-ends-with-between-assert-policyNumber",
              "targetPath": "policyNumber",
            },
          },
          Object {
            "conditionEvaluationResult": DefaultConditionEvaluationResult {
              "conditionEvaluation": "APPLICABLE",
              "error": undefined,
            },
            "kind": 2,
            "overrideInfo": Object {
              "overridable": false,
              "overrideApplicable": false,
              "overrideGroup": undefined,
            },
            "payloadResult": Object {
              "message": undefined,
              "success": true,
              "type": 1,
              "validationSeverity": "critical",
            },
            "ruleInfo": DefaultRuleInfo {
              "context": "Policy",
              "payloadtype": "ASSERTION",
              "ruleName": "f-lower-case-assert-policyNumber",
              "targetPath": "policyNumber",
            },
          },
          Object {
            "conditionEvaluationResult": DefaultConditionEvaluationResult {
              "conditionEvaluation": "APPLICABLE",
              "error": undefined,
            },
            "kind": 2,
            "overrideInfo": Object {
              "overridable": false,
              "overrideApplicable": false,
              "overrideGroup": undefined,
            },
            "payloadResult": Object {
              "message": undefined,
              "success": true,
              "type": 1,
              "validationSeverity": "critical",
            },
            "ruleInfo": DefaultRuleInfo {
              "context": "Policy",
              "payloadtype": "ASSERTION",
              "ruleName": "f-get-month-date-assert-policyNumber",
              "targetPath": "policyNumber",
            },
          },
          Object {
            "conditionEvaluationResult": DefaultConditionEvaluationResult {
              "conditionEvaluation": "APPLICABLE",
              "error": undefined,
            },
            "kind": 2,
            "overrideInfo": Object {
              "overridable": false,
              "overrideApplicable": false,
              "overrideGroup": undefined,
            },
            "payloadResult": Object {
              "message": undefined,
              "success": true,
              "type": 1,
              "validationSeverity": "critical",
            },
            "ruleInfo": DefaultRuleInfo {
              "context": "Policy",
              "payloadtype": "ASSERTION",
              "ruleName": "f-get-day-date-assert-policyNumber",
              "targetPath": "policyNumber",
            },
          },
          Object {
            "conditionEvaluationResult": DefaultConditionEvaluationResult {
              "conditionEvaluation": "APPLICABLE",
              "error": undefined,
            },
            "kind": 2,
            "overrideInfo": Object {
              "overridable": false,
              "overrideApplicable": false,
              "overrideGroup": undefined,
            },
            "payloadResult": Object {
              "message": undefined,
              "success": true,
              "type": 1,
              "validationSeverity": "critical",
            },
            "ruleInfo": DefaultRuleInfo {
              "context": "Policy",
              "payloadtype": "ASSERTION",
              "ruleName": "f-isBlank-assert-policyNumber",
              "targetPath": "policyNumber",
            },
          },
          Object {
            "conditionEvaluationResult": DefaultConditionEvaluationResult {
              "conditionEvaluation": "APPLICABLE",
              "error": undefined,
            },
            "kind": 2,
            "overrideInfo": Object {
              "overridable": false,
              "overrideApplicable": false,
              "overrideGroup": undefined,
            },
            "payloadResult": Object {
              "message": undefined,
              "success": true,
              "type": 1,
              "validationSeverity": "critical",
            },
            "ruleInfo": DefaultRuleInfo {
              "context": "Policy",
              "payloadtype": "ASSERTION",
              "ruleName": "f-get-year-date-assert-policyNumber",
              "targetPath": "policyNumber",
            },
          },
          Object {
            "conditionEvaluationResult": DefaultConditionEvaluationResult {
              "conditionEvaluation": "APPLICABLE",
              "error": undefined,
            },
            "kind": 2,
            "overrideInfo": Object {
              "overridable": false,
              "overrideApplicable": false,
              "overrideGroup": undefined,
            },
            "payloadResult": Object {
              "message": undefined,
              "success": true,
              "type": 1,
              "validationSeverity": "critical",
            },
            "ruleInfo": DefaultRuleInfo {
              "context": "Policy",
              "payloadtype": "ASSERTION",
              "ruleName": "f-date-months-between-assert-policyNumber",
              "targetPath": "policyNumber",
            },
          },
          Object {
            "conditionEvaluationResult": DefaultConditionEvaluationResult {
              "conditionEvaluation": "APPLICABLE",
              "error": undefined,
            },
            "kind": 2,
            "overrideInfo": Object {
              "overridable": false,
              "overrideApplicable": false,
              "overrideGroup": undefined,
            },
            "payloadResult": Object {
              "message": undefined,
              "success": true,
              "type": 1,
              "validationSeverity": "critical",
            },
            "ruleInfo": DefaultRuleInfo {
              "context": "Policy",
              "payloadtype": "ASSERTION",
              "ruleName": "f-length-assert-policyNumber",
              "targetPath": "policyNumber",
            },
          },
          Object {
            "conditionEvaluationResult": DefaultConditionEvaluationResult {
              "conditionEvaluation": "APPLICABLE",
              "error": undefined,
            },
            "kind": 2,
            "overrideInfo": Object {
              "overridable": false,
              "overrideApplicable": false,
              "overrideGroup": undefined,
            },
            "payloadResult": Object {
              "message": undefined,
              "success": true,
              "type": 1,
              "validationSeverity": "critical",
            },
            "ruleInfo": DefaultRuleInfo {
              "context": "Policy",
              "payloadtype": "ASSERTION",
              "ruleName": "f-number-to-string-assert-policyNumber",
              "targetPath": "policyNumber",
            },
          },
          Object {
            "conditionEvaluationResult": DefaultConditionEvaluationResult {
              "conditionEvaluation": "APPLICABLE",
              "error": undefined,
            },
            "kind": 2,
            "overrideInfo": Object {
              "overridable": false,
              "overrideApplicable": false,
              "overrideGroup": undefined,
            },
            "payloadResult": Object {
              "message": undefined,
              "success": true,
              "type": 1,
              "validationSeverity": "critical",
            },
            "ruleInfo": DefaultRuleInfo {
              "context": "Policy",
              "payloadtype": "ASSERTION",
              "ruleName": "f-any-assert-policyNumber",
              "targetPath": "policyNumber",
            },
          },
          Object {
            "conditionEvaluationResult": DefaultConditionEvaluationResult {
              "conditionEvaluation": "APPLICABLE",
              "error": undefined,
            },
            "kind": 2,
            "overrideInfo": Object {
              "overridable": false,
              "overrideApplicable": false,
              "overrideGroup": undefined,
            },
            "payloadResult": Object {
              "message": undefined,
              "success": true,
              "type": 1,
              "validationSeverity": "critical",
            },
            "ruleInfo": DefaultRuleInfo {
              "context": "Policy",
              "payloadtype": "ASSERTION",
              "ruleName": "f-isEmpty-assert-policyNumber",
              "targetPath": "policyNumber",
            },
          },
          Object {
            "conditionEvaluationResult": DefaultConditionEvaluationResult {
              "conditionEvaluation": "APPLICABLE",
              "error": undefined,
            },
            "kind": 2,
            "overrideInfo": Object {
              "overridable": false,
              "overrideApplicable": false,
              "overrideGroup": undefined,
            },
            "payloadResult": Object {
              "message": undefined,
              "success": true,
              "type": 1,
              "validationSeverity": "critical",
            },
            "ruleInfo": DefaultRuleInfo {
              "context": "Policy",
              "payloadtype": "ASSERTION",
              "ruleName": "f-numberSequence-assert-policyNumber",
              "targetPath": "policyNumber",
            },
          },
        ],
      },
    },
    "ruleTimeZoneId": "Europe/Vilnius",
  },
  "fieldResults": Object {
    "Policy:0:policyNumber": Object {
      "fieldType": "STRING",
      "id": "Policy:0:policyNumber",
      "info": Object {
        "getContextInstanceId": [Function],
        "getContextName": [Function],
      },
      "isDisabled": undefined,
      "isHidden": undefined,
      "resolvedTargetPath": "policyNumber",
      "ruleResults": Array [
        Object {
          "errorCode": "rule-assertion-error",
          "errorMessage": "Assertion failed",
          "isFailed": false,
          "isOverridable": false,
          "isOverridden": false,
          "payloadResult": Object {
            "message": undefined,
            "success": true,
            "type": 1,
            "validationSeverity": "critical",
          },
          "rawTemplateVariables": Array [],
          "ruleName": "f-symmetricDifference-assert-policyNumber",
          "severity": "critical",
          "templateVariables": Array [],
        },
        Object {
          "errorCode": "rule-assertion-error",
          "errorMessage": "Assertion failed",
          "isFailed": false,
          "isOverridable": false,
          "isOverridden": false,
          "payloadResult": Object {
            "message": undefined,
            "success": true,
            "type": 1,
            "validationSeverity": "critical",
          },
          "rawTemplateVariables": Array [],
          "ruleName": "f-distinct-assert-policyNumber",
          "severity": "critical",
          "templateVariables": Array [],
        },
        Object {
          "errorCode": "rule-assertion-error",
          "errorMessage": "Assertion failed",
          "isFailed": false,
          "isOverridable": false,
          "isOverridden": false,
          "payloadResult": Object {
            "message": undefined,
            "success": true,
            "type": 1,
            "validationSeverity": "critical",
          },
          "rawTemplateVariables": Array [],
          "ruleName": "f-upper-case-assert-policyNumber",
          "severity": "critical",
          "templateVariables": Array [],
        },
        Object {
          "errorCode": "rule-assertion-error",
          "errorMessage": "Assertion failed",
          "isFailed": false,
          "isOverridable": false,
          "isOverridden": false,
          "payloadResult": Object {
            "message": undefined,
            "success": true,
            "type": 1,
            "validationSeverity": "critical",
          },
          "rawTemplateVariables": Array [],
          "ruleName": "f-includes-in-array-assert-policyNumber",
          "severity": "critical",
          "templateVariables": Array [],
        },
        Object {
          "errorCode": "rule-assertion-error",
          "errorMessage": "Assertion failed",
          "isFailed": false,
          "isOverridable": false,
          "isOverridden": false,
          "payloadResult": Object {
            "message": undefined,
            "success": true,
            "type": 1,
            "validationSeverity": "critical",
          },
          "rawTemplateVariables": Array [],
          "ruleName": "f-format-date-assert-policyNumber",
          "severity": "critical",
          "templateVariables": Array [],
        },
        Object {
          "errorCode": "rule-assertion-error",
          "errorMessage": "Assertion failed",
          "isFailed": false,
          "isOverridable": false,
          "isOverridden": false,
          "payloadResult": Object {
            "message": undefined,
            "success": true,
            "type": 1,
            "validationSeverity": "critical",
          },
          "rawTemplateVariables": Array [],
          "ruleName": "f-intersection-assert-policyNumber",
          "severity": "critical",
          "templateVariables": Array [],
        },
        Object {
          "errorCode": "rule-assertion-error",
          "errorMessage": "Assertion failed",
          "isFailed": false,
          "isOverridable": false,
          "isOverridden": false,
          "payloadResult": Object {
            "message": undefined,
            "success": true,
            "type": 1,
            "validationSeverity": "critical",
          },
          "rawTemplateVariables": Array [],
          "ruleName": "f-trim-assert-policyNumber",
          "severity": "critical",
          "templateVariables": Array [],
        },
        Object {
          "errorCode": "rule-assertion-error",
          "errorMessage": "Assertion failed",
          "isFailed": false,
          "isOverridable": false,
          "isOverridden": false,
          "payloadResult": Object {
            "message": undefined,
            "success": true,
            "type": 1,
            "validationSeverity": "critical",
          },
          "rawTemplateVariables": Array [],
          "ruleName": "f-pad-left-assert-policyNumber",
          "severity": "critical",
          "templateVariables": Array [],
        },
        Object {
          "errorCode": "rule-assertion-error",
          "errorMessage": "Assertion failed",
          "isFailed": false,
          "isOverridable": false,
          "isOverridden": false,
          "payloadResult": Object {
            "message": undefined,
            "success": true,
            "type": 1,
            "validationSeverity": "critical",
          },
          "rawTemplateVariables": Array [],
          "ruleName": "f-all-assert-policyNumber",
          "severity": "critical",
          "templateVariables": Array [],
        },
        Object {
          "errorCode": "rule-assertion-error",
          "errorMessage": "Assertion failed",
          "isFailed": false,
          "isOverridable": false,
          "isOverridden": false,
          "payloadResult": Object {
            "message": undefined,
            "success": true,
            "type": 1,
            "validationSeverity": "critical",
          },
          "rawTemplateVariables": Array [],
          "ruleName": "f-union-assert-policyNumber",
          "severity": "critical",
          "templateVariables": Array [],
        },
        Object {
          "errorCode": "rule-assertion-error",
          "errorMessage": "Assertion failed",
          "isFailed": false,
          "isOverridable": false,
          "isOverridden": false,
          "payloadResult": Object {
            "message": undefined,
            "success": true,
            "type": 1,
            "validationSeverity": "critical",
          },
          "rawTemplateVariables": Array [],
          "ruleName": "f-difference-assert-policyNumber",
          "severity": "critical",
          "templateVariables": Array [],
        },
        Object {
          "errorCode": "rule-assertion-error",
          "errorMessage": "Assertion failed",
          "isFailed": false,
          "isOverridable": false,
          "isOverridden": false,
          "payloadResult": Object {
            "message": undefined,
            "success": true,
            "type": 1,
            "validationSeverity": "critical",
          },
          "rawTemplateVariables": Array [],
          "ruleName": "f-concat-assert-policyNumber",
          "severity": "critical",
          "templateVariables": Array [],
        },
        Object {
          "errorCode": "rule-assertion-error",
          "errorMessage": "Assertion failed",
          "isFailed": false,
          "isOverridable": false,
          "isOverridden": false,
          "payloadResult": Object {
            "message": undefined,
            "success": true,
            "type": 1,
            "validationSeverity": "critical",
          },
          "rawTemplateVariables": Array [],
          "ruleName": "f-pad-right-assert-policyNumber",
          "severity": "critical",
          "templateVariables": Array [],
        },
        Object {
          "errorCode": "rule-assertion-error",
          "errorMessage": "Assertion failed",
          "isFailed": false,
          "isOverridable": false,
          "isOverridden": false,
          "payloadResult": Object {
            "message": undefined,
            "success": true,
            "type": 1,
            "validationSeverity": "critical",
          },
          "rawTemplateVariables": Array [],
          "ruleName": "f-money-to-string-assert-policyNumber",
          "severity": "critical",
          "templateVariables": Array [],
        },
        Object {
          "errorCode": "rule-assertion-error",
          "errorMessage": "Assertion failed",
          "isFailed": false,
          "isOverridable": false,
          "isOverridden": false,
          "payloadResult": Object {
            "message": undefined,
            "success": true,
            "type": 1,
            "validationSeverity": "critical",
          },
          "rawTemplateVariables": Array [],
          "ruleName": "f-join-assert-policyNumber",
          "severity": "critical",
          "templateVariables": Array [],
        },
        Object {
          "errorCode": "rule-assertion-error",
          "errorMessage": "Assertion failed",
          "isFailed": false,
          "isOverridable": false,
          "isOverridden": false,
          "payloadResult": Object {
            "message": undefined,
            "success": true,
            "type": 1,
            "validationSeverity": "critical",
          },
          "rawTemplateVariables": Array [],
          "ruleName": "f-includes-in-string-assert-policyNumber",
          "severity": "critical",
          "templateVariables": Array [],
        },
        Object {
          "errorCode": "rule-assertion-error",
          "errorMessage": "Assertion failed",
          "isFailed": false,
          "isOverridable": false,
          "isOverridden": false,
          "payloadResult": Object {
            "message": undefined,
            "success": true,
            "type": 1,
            "validationSeverity": "critical",
          },
          "rawTemplateVariables": Array [],
          "ruleName": "f-starts-with-assert-policyNumber",
          "severity": "critical",
          "templateVariables": Array [],
        },
        Object {
          "errorCode": "rule-assertion-error",
          "errorMessage": "Assertion failed",
          "isFailed": false,
          "isOverridable": false,
          "isOverridden": false,
          "payloadResult": Object {
            "message": undefined,
            "success": true,
            "type": 1,
            "validationSeverity": "critical",
          },
          "rawTemplateVariables": Array [],
          "ruleName": "f-ends-with-between-assert-policyNumber",
          "severity": "critical",
          "templateVariables": Array [],
        },
        Object {
          "errorCode": "rule-assertion-error",
          "errorMessage": "Assertion failed",
          "isFailed": false,
          "isOverridable": false,
          "isOverridden": false,
          "payloadResult": Object {
            "message": undefined,
            "success": true,
            "type": 1,
            "validationSeverity": "critical",
          },
          "rawTemplateVariables": Array [],
          "ruleName": "f-lower-case-assert-policyNumber",
          "severity": "critical",
          "templateVariables": Array [],
        },
        Object {
          "errorCode": "rule-assertion-error",
          "errorMessage": "Assertion failed",
          "isFailed": false,
          "isOverridable": false,
          "isOverridden": false,
          "payloadResult": Object {
            "message": undefined,
            "success": true,
            "type": 1,
            "validationSeverity": "critical",
          },
          "rawTemplateVariables": Array [],
          "ruleName": "f-get-month-date-assert-policyNumber",
          "severity": "critical",
          "templateVariables": Array [],
        },
        Object {
          "errorCode": "rule-assertion-error",
          "errorMessage": "Assertion failed",
          "isFailed": false,
          "isOverridable": false,
          "isOverridden": false,
          "payloadResult": Object {
            "message": undefined,
            "success": true,
            "type": 1,
            "validationSeverity": "critical",
          },
          "rawTemplateVariables": Array [],
          "ruleName": "f-get-day-date-assert-policyNumber",
          "severity": "critical",
          "templateVariables": Array [],
        },
        Object {
          "errorCode": "rule-assertion-error",
          "errorMessage": "Assertion failed",
          "isFailed": false,
          "isOverridable": false,
          "isOverridden": false,
          "payloadResult": Object {
            "message": undefined,
            "success": true,
            "type": 1,
            "validationSeverity": "critical",
          },
          "rawTemplateVariables": Array [],
          "ruleName": "f-isBlank-assert-policyNumber",
          "severity": "critical",
          "templateVariables": Array [],
        },
        Object {
          "errorCode": "rule-assertion-error",
          "errorMessage": "Assertion failed",
          "isFailed": false,
          "isOverridable": false,
          "isOverridden": false,
          "payloadResult": Object {
            "message": undefined,
            "success": true,
            "type": 1,
            "validationSeverity": "critical",
          },
          "rawTemplateVariables": Array [],
          "ruleName": "f-get-year-date-assert-policyNumber",
          "severity": "critical",
          "templateVariables": Array [],
        },
        Object {
          "errorCode": "rule-assertion-error",
          "errorMessage": "Assertion failed",
          "isFailed": false,
          "isOverridable": false,
          "isOverridden": false,
          "payloadResult": Object {
            "message": undefined,
            "success": true,
            "type": 1,
            "validationSeverity": "critical",
          },
          "rawTemplateVariables": Array [],
          "ruleName": "f-date-months-between-assert-policyNumber",
          "severity": "critical",
          "templateVariables": Array [],
        },
        Object {
          "errorCode": "rule-assertion-error",
          "errorMessage": "Assertion failed",
          "isFailed": false,
          "isOverridable": false,
          "isOverridden": false,
          "payloadResult": Object {
            "message": undefined,
            "success": true,
            "type": 1,
            "validationSeverity": "critical",
          },
          "rawTemplateVariables": Array [],
          "ruleName": "f-length-assert-policyNumber",
          "severity": "critical",
          "templateVariables": Array [],
        },
        Object {
          "errorCode": "rule-assertion-error",
          "errorMessage": "Assertion failed",
          "isFailed": false,
          "isOverridable": false,
          "isOverridden": false,
          "payloadResult": Object {
            "message": undefined,
            "success": true,
            "type": 1,
            "validationSeverity": "critical",
          },
          "rawTemplateVariables": Array [],
          "ruleName": "f-number-to-string-assert-policyNumber",
          "severity": "critical",
          "templateVariables": Array [],
        },
        Object {
          "errorCode": "rule-assertion-error",
          "errorMessage": "Assertion failed",
          "isFailed": false,
          "isOverridable": false,
          "isOverridden": false,
          "payloadResult": Object {
            "message": undefined,
            "success": true,
            "type": 1,
            "validationSeverity": "critical",
          },
          "rawTemplateVariables": Array [],
          "ruleName": "f-any-assert-policyNumber",
          "severity": "critical",
          "templateVariables": Array [],
        },
        Object {
          "errorCode": "rule-assertion-error",
          "errorMessage": "Assertion failed",
          "isFailed": false,
          "isOverridable": false,
          "isOverridden": false,
          "payloadResult": Object {
            "message": undefined,
            "success": true,
            "type": 1,
            "validationSeverity": "critical",
          },
          "rawTemplateVariables": Array [],
          "ruleName": "f-isEmpty-assert-policyNumber",
          "severity": "critical",
          "templateVariables": Array [],
        },
        Object {
          "errorCode": "rule-assertion-error",
          "errorMessage": "Assertion failed",
          "isFailed": false,
          "isOverridable": false,
          "isOverridden": false,
          "payloadResult": Object {
            "message": undefined,
            "success": true,
            "type": 1,
            "validationSeverity": "critical",
          },
          "rawTemplateVariables": Array [],
          "ruleName": "f-numberSequence-assert-policyNumber",
          "severity": "critical",
          "templateVariables": Array [],
        },
      ],
    },
  },
}
`;
